<resources>
    <string name="app_name">A goal for everyone</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_setting">Setting</string>
    <string name="str_start">Start</string>
    <string name="menu">Menu</string>
    <string name="start">Start</string>
    <string name="time">Time</string>
    <string name="_1_30">1:30</string>
    <string name="attempt">Attempt</string>
    <string name="round">Round</string>
    <string name="_12">12</string>
    <string name="score">Score</string>
    <string name="_1_0">1/0</string>
    <string name="setting">Setting</string>
    <string name="sound_on_off">Sound On/Off</string>
    <string name="vibration_on_off">Vibration On/Off</string>
    <string name="language">Language</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="you_win">You win</string>
    <string name="replay">Replay</string>
</resources>