<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_square_red">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_win"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/_1_30"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvRound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/round_number"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/_1_0"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnMenu"
                android:layout_width="0dp"
                android:layout_height="50dp"

                android:layout_weight="1"
                android:background="@drawable/btn_black"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/menu"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="normal"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btnReplay"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/btn_black"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/replay"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="normal"
                app:backgroundTint="@null" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>