<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="8.1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:background="#0D0D0D"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/img5"
                    android:layout_marginStart="50dp"/>

            </FrameLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:background="#882222"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/img6"
                    android:layout_marginEnd="50dp"/>

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#500D0D0D"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:text="@string/sound_on_off"
                android:background="@drawable/btn_black"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:padding="10dp"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivMuteOff"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:src="@drawable/mute_off"
                    android:background="@drawable/btn_square_black"
                    android:padding="20dp"
                    android:layout_marginEnd="25dp"
                    app:tint="#882222" />

                <ImageView
                    android:id="@+id/ivMuteOn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:src="@drawable/mute_on"
                    android:background="@drawable/btn_square_red"
                    android:padding="20dp"
                    android:layout_marginStart="25dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:text="@string/vibration_on_off"
                android:background="@drawable/btn_black"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:padding="10dp"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivVibrationOn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:src="@drawable/vibration_on"
                    android:background="@drawable/btn_square_black"
                    android:padding="20dp"
                    android:layout_marginEnd="25dp"
                    app:tint="#882222" />

                <ImageView
                    android:id="@+id/ivVibrationOff"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:src="@drawable/vibration_off"
                    android:background="@drawable/btn_square_red"
                    android:padding="20dp"
                    android:layout_marginStart="25dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:text="@string/language"
                android:background="@drawable/btn_black"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:padding="10dp"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivEn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:src="@drawable/en"
                    android:background="@drawable/btn_square_black"
                    android:padding="25dp"
                    android:layout_marginEnd="25dp"
                    app:tint="#882222" />

                <ImageView
                    android:id="@+id/ivRu"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ru"
                    android:background="@drawable/btn_square_red"
                    android:padding="25dp"
                    android:layout_marginStart="25dp"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_marginBottom="-50dp"
            android:layout_marginTop="50dp"
            android:textSize="28sp"
            android:text="@string/back_to_menu"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/btn_black"
            app:backgroundTint="@null"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:background="@drawable/v_menu">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="normal"/>

    </LinearLayout>

</FrameLayout>